2014-04-09  Ken Brown  <kbrown@cornell.edu>

	* Makefile.in (EMACS_MANIFEST): Revert last change.

2014-04-07  Stefan Monnier  <monnier@iro.umontreal.ca>

	* lisp.h (struct Lisp_Symbol): New bitfield `pinned'.

	* alloc.c: Keep track of symbols referenced from pure space (bug#17168).
	(symbol_block_pinned): New var.
	(Fmake_symbol): Initialize `pinned'.
	(purecopy): New function, extracted from Fpurecopy.  Mark symbols as
	pinned and signal an error for un-purifiable objects.
	(pure_cons): Use it.
	(Fpurecopy): Use it, except for objects that can't be purified.
	(mark_pinned_symbols): New function.
	(Fgarbage_collect): Use it.
	(gc_sweep): Remove hack made unnecessary.

2014-04-05  Glenn Morris  <rgm@gnu.org>

	* keyboard.c (Fopen_dribble_file): Doc tweak.

2014-04-04  Jan Djärv  <jan.h.d@swipnet.se>

	Backport from trunk.
	* nsterm.m (updateFrameSize:): If waiting for the tool bar and tool
	bar is zero height, just return (Bug#16976).
	(initFrameFromEmacs:): Initialize wait_for_tool_bar.
	* nsterm.h (EmacsView): Add wait_for_tool_bar.
	* nsmenu.m (update_frame_tool_bar): Return early if view or toolbar
	is nil.  If waiting for toolbar to complete, force a redraw.
	(free_frame_tool_bar): Set wait_for_tool_bar = NO (Bug#16976).

2014-04-03  Ken Brown  <kbrown@cornell.edu>

	* Makefile.in (EMACS_MANIFEST): Update comment.  (Bug#17176)

2014-04-02  Martin Rudalics  <rudalics@gmx.at>

	* xterm.c (x_new_font): Don't calculate non-toolkit scrollbar
	width from font width (Bug#17163).

2014-03-30  Martin Rudalics  <rudalics@gmx.at>

	* frame.c (x_set_frame_parameters): Calculate default values of
	new frame sizes only after all other frame parameters have been
	processed (Bug#17142).

2014-03-28  Ken Brown  <kbrown@cornell.edu>

	* conf_post.h (SYSTEM_PURESIZE_EXTRA) [CYGWIN]: Set to 10000.
	(Bug#17112)

2014-03-28  YAMAMOTO Mitsuharu  <mituharu@math.s.chiba-u.ac.jp>

	* xterm.c (x_draw_image_glyph_string): Adjust image background