@@ -1,3 +1,7 @@
+2014-04-11  Glenn Morris  <rgm@gnu.org>
+
+	* keyboard.c (Fopen_dribble_file): Make file private.  (Bug#17187)
+
 2014-04-09  Ken Brown  <kbrown@cornell.edu>
 
 	* Makefile.in (EMACS_MANIFEST): Revert last change.
